--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Please cite the following references if you use these data:			
+Please cite the following reference if you use these data:			
 			
 "Think Like an Expert: Neural Alignment Predicts Understanding in Students Taking an Introduction to Computer Science Course (2020). Meir Meshulam, Liat Hasenfratz, Hanna Hillman, Yun-Fei Liu, Mai Nguyen, Kenneth A. Norman, Uri Hasson."			
 bioRxiv 2020.05.05.079384; doi: https://doi.org/10.1101/2020.05.05.079384			
@@ -13,7 +13,7 @@ Behavioral data about the final exam is provided in the 'sourcedata' folder. Res
 
 A summary of the available task files is provided below.
 	
-Tasks	    Description	        Lecture	                Number of TRs
+Tasks	            Description	        Lecture	                Number of TRs
 wk1_vid1	    Lecture segment	Conditionals & Loops	173
 wk1_vid2	    Lecture segment	Conditionals & Loops	304
 wk1_vid3	    Lecture segment	Conditionals & Loops	161
@@ -35,9 +35,9 @@ wk5_vid2	    Lecture segment	Theory of computing	    251
 wk5_vid3	    Lecture segment	Theory of computing	    290
 wk5_vid4	    Lecture segment	Theory of computing	    367
 wk5_vid5	    Lecture segment	Theory of computing	    145
-wk6_recap1	    Recap	        Conditionals & Loops    99
-wk6_recap2	    Recap	        Functions & Libraries   98
-wk6_recap3	    Recap	        Abstract Data Types	    97
-wk6_recap4	    Recap	        Performance	            88
-wk6_recap5	    Recap	        Theory of computing	    95
-wk6_placement	Exam	        N/A	                    N/A
+wk6_recap1	    Recap	            Conditionals & Loops    99
+wk6_recap2	    Recap	            Functions & Libraries   98
+wk6_recap3	    Recap	            Abstract Data Types	    97
+wk6_recap4	    Recap	            Performance	            88
+wk6_recap5	    Recap	            Theory of computing	    95
+wk6_placement	Exam	        N/A	                        N/A
