--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.2.1 2021-05-05
+  - Update source publication in Nature Communications
+  - Format of 'participant_id' column changed to 'sub-<subject_id>' in participants.tsv 
 1.2.0 2020-10-14
   - Fixed temporal offset in recap files [ses-wk6_task-wk1recap_bold.nii.gz .. ses-wk6_task-wk5recap_bold.nii.gz] in expert subjects [sub-s201, sub-s213, sub-s214, sub-s215, sub-s216]
 1.1.1 2020-10-01
